Making nice page to link to book PDF.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,23 @@
-hello
+<!doctype html>
+
+<html lang="en">
+<head>
+  <title>Star Formation</title>
+  <link rel="stylesheet" type="text/css" href="./book.css">
+  <meta HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=utf-8">
+</head>
+
+<body>
+
+  <div id="main">
+
+    <h1>Star Formation</h1>
+    <h2>Mark Krumholz</h2>
+
+    <p>book pdf: <a href="sfnotes.pdf">sfnotes.pdf</a>
+    <p>github source: <a href="https://github.com/Open-Astrophysics-Bookshelf/star_formation_notes">Open-Astrophysics-Bookshelf/star_formation_notes</a>
+
+  </div>
+
+</body>
+</html>
